# yastar

./: .env-template  .gitignore  Cargo.toml  README.md  adrgen.config.yml  flake.nix  justfile
.github/workflows/: nix-build.yml  nix-format.yml  test-rust.yml  update-data.yml
doc/adrs/: 0001-use-rust.md
docs/adrs/: 0001-use-rust.md  0002-stop-generating-diagrams.md  adr_template.md
src/: chart.rs  db.rs  lib.rs  main.rs
src/api/github/: commit-history.graphql  login.graphql  mod.rs  owned-repos.graphql  stargazers.graphql
