[package]
name = "yastar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
dotenvy = "0.15.7"
duckdb = "1.1.1"
futures = "0.3.31"
graphql_client = { version = "0.14.0", features = ["reqwest"] }
itertools = "0.13.0"
log = "0.4.22"
plotters = { version = "0.3.7", default-features = false, features = ["datetime", "svg_backend", "line_series", "point_series", "full_palette"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde = "1.0.213"
serde_json = "1.0.132"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = { git = "https://github.com/tokio-rs/tracing.git" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git" }
